fix: fixed sonar code smells and hotspots